# VRIJE_Vacancy

conf/: Camera_Reader  KinectConfig.xml  User  logger.conf  plugins
data/: .directory
dependencies/VJoy/inc/: public.h
doc/: Doxyfile
doc/html/: _camera___reader_2_main_8cpp_source.html  _camera___reader_2dllmain_8cpp_source.html  _camera___reader_2tracking_8hpp_source.html  _camera___reader_8h_source.html  _color___tracker_2_main_8cpp_source.html  _color___tracker_8h_source.html  _config_file_8cpp_source.html  _config_file_8h_source.html  _file___writer_2_main_8cpp_source.html  _file___writer_8h_source.html  _function___caller_2_main_8cpp_source.html  _function___caller_8h_source.html  _function___test_2_main_8cpp_source.html  _function___test_8h_source.html  _g_l___window_8cpp_source.html  _g_l___window_8h_source.html  _g_l___window__bk_8cpp_source.html  _g_l___window__bk_8h_source.html  _ip_endpoint_name_8cpp_source.html  _ip_endpoint_name_8h_source.html  _joypad_8cpp_source.html  _joypad_8h.html  _joypad_8h__dep__incl.map  _joypad_8h__dep__incl.md5  _joypad_8h__incl.map  _joypad_8h__incl.md5  _joypad_8h_source.html  _joystick___reader_2_main_8cpp_source.html  _joystick___writer_2_main_8cpp_source.html  _joystick___writer_2dllmain_8cpp_source.html  _joystick___writer_8h_source.html  _logger_8h_source.html  _logger___a_p_i_2easylogging_09_09_8h_source.html  _main_8cpp_source.html  _message_mapping_osc_packet_listener_8h_source.html  _network___client_2_main_8cpp_source.html  _network___client_2_net_8h_source.html  _network___client_2_net_thread_8cpp_source.html  _network___client_2_net_thread_8h.html  _network___client_2_net_thread_8h__dep__incl.map  (+770 more)
doc/html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_16.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_10.js  classes_12.js  classes_13.js  classes_15.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  defines_0.js  enums_0.js  files_0.js  files_2.js  files_4.js  functions_0.js  functions_1.js  functions_10.js  functions_15.js  functions_17.js  functions_2.js  functions_5.js  (+21 more)
doc/latex/: _joypad_8h.tex  _joypad_8h__dep__incl.md5  _joypad_8h__incl.md5  _network___client_2_net_thread_8h.tex  _network___client_2_net_thread_8h__dep__incl.md5  _network___client_2_net_thread_8h__incl.md5  _network___server_2_net_thread_8h.tex  _network___server_2_net_thread_8h__dep__incl.md5  _network___server_2_net_thread_8h__incl.md5  annotated.tex  class_button.tex  class_button__coll__graph.md5  class_button__inherit__graph.md5  class_c_joypad.tex  class_c_joypad__coll__graph.md5  class_c_joypad__inherit__graph.md5  class_c_quaternion.tex  class_camera___reader.tex  class_camera___reader__coll__graph.md5  class_camera___reader__inherit__graph.md5  class_color___tracker.tex  class_color___tracker__coll__graph.md5  class_color___tracker__inherit__graph.md5  class_config_file.tex  class_config_file__coll__graph.md5  class_console.tex  class_console__coll__graph.md5  class_console__inherit__graph.md5  class_file___writer.tex  class_file___writer__coll__graph.md5  class_file___writer__inherit__graph.md5  class_function___caller.tex  class_function___caller__coll__graph.md5  class_function___caller__inherit__graph.md5  class_function___test.tex  class_function___test__coll__graph.md5  class_function___test__inherit__graph.md5  class_g_l___window.tex  class_g_l___window__coll__graph.md5  class_g_l___window__inherit__graph.md5  (+353 more)
src/: CMakeLists.txt  Main.cpp
src/Camera_Reader/: CMakeLists.txt  Camera_Reader.h  Main.cpp  dllmain.cpp
src/Color_Tracker/: CMakeLists.txt  Color_Tracker.h  Main.cpp
src/File_Writer/: CMakeLists.txt  File_Writer.h  Main.cpp
src/Function_Caller/: CMakeLists.txt  Function_Caller.h  Main.cpp
src/Function_Test/: CMakeLists.txt  Function_Test.h  Main.cpp
src/Gui/: CMakeLists.txt  GL_Window.cpp  GL_Window_bk.cpp  GL_Window_bk.h  Ni_Depth.cpp  Ni_Depth.h  button.cpp  button.h  console.cpp  console.h  gui.cpp  gui.h  input_singleton.cpp  input_singleton.h  tab.cpp  tab.h  textbox.cpp  textbox.h  video.cpp  video.h  view2d.cpp  view2d.h  widget.cpp  widget.h
src/Joystick_Reader/: CMakeLists.txt  Joypad.cpp  Joypad.h  Joystick_Reader  Main.cpp  Makefile  cmake_install.cmake
src/Joystick_Writer/: CMakeLists.txt  Joystick_Writer.h  Main.cpp  Makefile
src/Logger_API/: CMakeLists.txt  Logger.cpp  Logger.h  main.cpp
src/Network_Client/: CMakeLists.txt  Main.cpp  Makefile  NetThread.cpp  Thread.h  cmake_install.cmake  gsNetPoll_g++.cpp
src/Network_Server/: CMakeLists.txt  Main.cpp  Makefile  Net.h  NetThread.h  Thread.h  cmake_install.cmake  gsNetPoll_g++.h
src/Plugin_API/: CMakeLists.txt  coreapi.cpp  coreapi.h  defines.h  plugin.h  pluginapi.cpp  pluginapi.h  pluginmanager.cpp  pluginmanager.h  thread.cpp  thread.h
src/Screen_Reader/: CMakeLists.txt  Main.cpp
src/Shared_Memory/: CMakeLists.txt  Shared_Memory.cpp  Shared_Memory.h
src/Tuio_Client/: CMakeLists.txt  Main.cpp  TuioClient.h
src/include/: ConfigFile.cpp  MDP.h  cudd.h  cuddInt.h  dddmp.h  dddmpInt.h  epd.h  mdp-pspudd.h  mdpparser.tab.h  mtr.h  net2.h  pair.h  pspudd_pat.hh  st.h  util.h
