CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(Function_Caller)
CMAKE_POLICY(SET CMP0015 NEW)

LINK_DIRECTORIES(../../dependencies/PThreads/lib/x64)

INCLUDE_DIRECTORIES(../Plugin_API/)
INCLUDE_DIRECTORIES(../Shared_Memory/)
INCLUDE_DIRECTORIES(../Logger_API)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

ADD_LIBRARY(Function_Caller MODULE Main.cpp )
TARGET_LINK_LIBRARIES(Function_Caller Plugin_API Logger_API Shared_Memory) 


